fixed code issues

--- a/index.html
+++ b/index.html
@@ -347,18 +347,18 @@
                 <div class="disabled boxShadow">
                     <div>
                         <label for="boxshX">X Shadow:</label>
-                        <input type="range" name="boxshX" id="boxshX" min="-50" max="50" value="0">
+                        <input type="range" name="boxshX" min="-50" max="50" value="0">
                         <span id="boxshX"></span>
                     </div>
                     <div>
                         <label for="boxshY">Y Shadow:</label>
-                        <input type="range" name="boxshY" id="boxshY" min="-50" max="50" value="0">
+                        <input type="range" name="boxshY"  min="-50" max="50" value="0">
                         <span id="boxshY"></span>
                     </div>
                     <div>
                         <label for="boxshBlur">Blur:</label>
-                        <input type="range" name="boxshBlur" id="boxshBlur" min="0" max="50" value="0">
-                        <span id="boxshY"></span>
+                        <input type="range" name="boxshBlur" min="0" max="50" value="0">
+                        <span id="boxshBlur"></span>
                     </div>
                     <div>
                         <label for="boxshColor">Color:</label>
