--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>customize your button</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="onedark.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js" defer></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script src="app.js" defer></script>
     <script src="css.min.js" defer></script>
     <script src="javascript.min.js" defer></script>
@@ -411,6 +411,5 @@
 
 
 
-<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
